--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "lucide": "^0.487.0",
+    "lucide-static": "^0.487.0"
   }
 }
